// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderChecklist Test Suite should not render when showFlightdetails is false 1`] = `
<Fragment>
  <div
    className="checklist-tab-section"
  >
    <button
      className="tab-header "
      onClick={[Function]}
      type="button"
    >
      <div
        className="tab-header-text-wrapper"
      >
        <span
          className="tab-header-text"
        >
          FLIGHT DETAILS
        </span>
      </div>
      <p
        className="tab-header-name"
      >
        pending...
      </p>
    </button>
  </div>
  <div
    className="line"
  />
  <div
    className="checklist-body-section"
  />
</Fragment>
`;

exports[`RenderChecklist Test Suite should render correctly 1`] = `
<Fragment>
  <div
    className="checklist-tab-section"
  >
    <ChecklistTabs
      checklist={
        Object {
          "config": Array [
            Object {
              "behaviour": Object {},
              "configuration": Object {
                "options": Array [
                  Object {
                    "behaviour": Object {},
                    "id": "KGCe-ZmzYG",
                    "name": "",
                  },
                ],
              },
              "id": "W8rf1uoGJ",
              "order": 1,
              "prompt": "Do you have a passport",
              "type": "image",
            },
          ],
          "createdAt": "2019-07-30T20:46:23.771Z",
          "createdBy": "2414",
          "destinations": Array [
            Object {
              "checklistId": 2,
              "country": Object {
                "country": "Angola",
                "createdAt": "2019-07-30T20:46:23.797Z",
                "id": 3,
                "regionId": 9999,
                "updatedAt": "2019-07-30T20:46:23.797Z",
              },
              "countryId": 3,
              "createdAt": "2019-07-30T20:46:23.863Z",
              "id": 2,
              "region": null,
              "regionId": null,
              "updatedAt": "2019-07-30T20:46:23.863Z",
            },
          ],
          "id": 2,
          "name": "Nigeria-Angola",
          "updatedAt": "2019-07-30T20:46:23.771Z",
        }
      }
      isActive={true}
      key="2"
      onTabClick={[Function]}
      tripNum={1}
    />
    <button
      className="tab-header "
      onClick={[Function]}
      type="button"
    >
      <div
        className="tab-header-text-wrapper"
      >
        <span
          className="tab-header-text"
        >
          FLIGHT DETAILS
        </span>
      </div>
      <p
        className="tab-header-name"
      >
        pending...
      </p>
    </button>
  </div>
  <div
    className="line"
  />
  <div
    className="checklist-body-section"
  >
    <ChecklistDetails
      checklist={
        Object {
          "config": Array [
            Object {
              "behaviour": Object {},
              "configuration": Object {
                "options": Array [
                  Object {
                    "behaviour": Object {},
                    "id": "KGCe-ZmzYG",
                    "name": "",
                  },
                ],
              },
              "id": "W8rf1uoGJ",
              "order": 1,
              "prompt": "Do you have a passport",
              "type": "image",
            },
          ],
          "createdAt": "2019-07-30T20:46:23.771Z",
          "createdBy": "2414",
          "destinations": Array [
            Object {
              "checklistId": 2,
              "country": Object {
                "country": "Angola",
                "createdAt": "2019-07-30T20:46:23.797Z",
                "id": 3,
                "regionId": 9999,
                "updatedAt": "2019-07-30T20:46:23.797Z",
              },
              "countryId": 3,
              "createdAt": "2019-07-30T20:46:23.863Z",
              "id": 2,
              "region": null,
              "regionId": null,
              "updatedAt": "2019-07-30T20:46:23.863Z",
            },
          ],
          "id": 2,
          "name": "Nigeria-Angola",
          "updatedAt": "2019-07-30T20:46:23.771Z",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`RenderChecklist Test Suite should render correctly when showFlightdetails is true 1`] = `
<Fragment>
  <div
    className="checklist-tab-section"
  >
    <ChecklistTabs
      checklist={
        Object {
          "config": Array [
            Object {
              "behaviour": Object {},
              "configuration": Object {
                "options": Array [
                  Object {
                    "behaviour": Object {},
                    "id": "KGCe-ZmzYG",
                    "name": "",
                  },
                ],
              },
              "id": "W8rf1uoGJ",
              "order": 1,
              "prompt": "Do you have a passport",
              "type": "image",
            },
          ],
          "createdAt": "2019-07-30T20:46:23.771Z",
          "createdBy": "2414",
          "destinations": Array [
            Object {
              "checklistId": 2,
              "country": Object {
                "country": "Angola",
                "createdAt": "2019-07-30T20:46:23.797Z",
                "id": 3,
                "regionId": 9999,
                "updatedAt": "2019-07-30T20:46:23.797Z",
              },
              "countryId": 3,
              "createdAt": "2019-07-30T20:46:23.863Z",
              "id": 2,
              "region": null,
              "regionId": null,
              "updatedAt": "2019-07-30T20:46:23.863Z",
            },
          ],
          "id": 2,
          "name": "Nigeria-Angola",
          "updatedAt": "2019-07-30T20:46:23.771Z",
        }
      }
      isActive={false}
      key="2"
      onTabClick={[Function]}
      tripNum={1}
    />
    <button
      className="tab-header selected"
      onClick={[Function]}
      type="button"
    >
      <div
        className="tab-header-text-wrapper"
      >
        <span
          className="tab-header-text"
        >
          FLIGHT DETAILS
        </span>
        <img
          alt="active-icon"
          className="active-icon"
          src="icon.svg"
        />
      </div>
      <p
        className="tab-header-name"
      >
        pending...
      </p>
    </button>
  </div>
  <div
    className="line"
  />
  <div
    className="checklist-body-section"
  >
    <div>
       Flight Details Here!!! 
    </div>
  </div>
</Fragment>
`;

exports[`RenderChecklist Test Suite should render correctly when tabIndex exists 1`] = `
<Fragment>
  <div
    className="checklist-tab-section"
  >
    <ChecklistTabs
      checklist={
        Object {
          "config": Array [
            Object {
              "behaviour": Object {},
              "configuration": Object {
                "options": Array [
                  Object {
                    "behaviour": Object {},
                    "id": "KGCe-ZmzYG",
                    "name": "",
                  },
                ],
              },
              "id": "W8rf1uoGJ",
              "order": 1,
              "prompt": "Do you have a passport",
              "type": "image",
            },
          ],
          "createdAt": "2019-07-30T20:46:23.771Z",
          "createdBy": "2414",
          "destinations": Array [
            Object {
              "checklistId": 2,
              "country": Object {
                "country": "Angola",
                "createdAt": "2019-07-30T20:46:23.797Z",
                "id": 3,
                "regionId": 9999,
                "updatedAt": "2019-07-30T20:46:23.797Z",
              },
              "countryId": 3,
              "createdAt": "2019-07-30T20:46:23.863Z",
              "id": 2,
              "region": null,
              "regionId": null,
              "updatedAt": "2019-07-30T20:46:23.863Z",
            },
          ],
          "id": 2,
          "name": "Nigeria-Angola",
          "updatedAt": "2019-07-30T20:46:23.771Z",
        }
      }
      isActive={false}
      key="2"
      onTabClick={[Function]}
      tripNum={1}
    />
    <button
      className="tab-header "
      onClick={[Function]}
      type="button"
    >
      <div
        className="tab-header-text-wrapper"
      >
        <span
          className="tab-header-text"
        >
          FLIGHT DETAILS
        </span>
      </div>
      <p
        className="tab-header-name"
      >
        pending...
      </p>
    </button>
  </div>
  <div
    className="line"
  />
  <div
    className="checklist-body-section"
  />
</Fragment>
`;
